SILGen: Fix dynamic calls of 'throwing' methods

Fixes <https://bugs.swift.org/browse/SR-2320>.